for this commit now, I've added a new pause function for my blockjump gam (do check it out), a reset counter for it, fixed forgot password to show a popup using the window.href JS function, changed up index to fix the game image into it, implemented the back button again for the popup element, fixed login and signup.js so now it works, changed up Main.css a little, and yeah. Also do fix the signup and login page to match the credentials, and don't forget to fix the footer to stick to the end of the page for the landing.html page,  and also I've fixed the root source files to interact properly with each other now.

--- a/WEB-ARCADE/Public/CSS/Main.css
+++ b/WEB-ARCADE/Public/CSS/Main.css
@@ -11,6 +11,46 @@ html, body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    position: relative;
+}
+
+.confirm {
+    z-index:30;
+    width:100; height:100;
+    background-color:white;
+    position: absolute;
+    transform:translate(27%, 60%);
+    padding:10px;
+    margin-bottom:15px;
+    text-align:center;
+    font-size:1.25em;
+    font-weight:normal;
+}
+
+.confirm-msg {
+    text-align:center;
+    font-weight:bold;
+    font-size:1.5em;
+}
+
+.back[type="image"] {
+    position:absolute;
+    z-index:40;
+    transform: translate(283%, 275%);
+}
+
+.back[type="image"]:hover {
+    z-index:40;
+    background-color:#4547db;
+    border-radius:15px;
+    transform: translate(283%, 275%), scale(1,3);
+}
+
+.back[type="image"]:focus {
+    background-color:#4547db;
+    border-radius:3px;
+    transform:scale(1.3);
+    transform: translate(283%, 275%);
 }
 
 body {
@@ -96,19 +136,19 @@ a:hover {
 }
 
 footer {
-background-color: #070643;
-color: #FFFFFF;
-align-items: center;
-text-align: center;
-justify-content: center;
-display: flex;
-height: 110px;
-width: 100%;
-box-sizing: border-box;
-box-shadow: #000000 0px -3px 5px;
-z-index: 100;
-margin-top: auto;
-font-family: 'Microsoft YaHei';
+    background-color: #070643;
+    color: #FFFFFF;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    height: 110px;
+    width: 100%;
+    box-sizing: border-box;
+    box-shadow: #000000 0px -3px 5px;
+    z-index: 100;
+    margin-top: auto;
+    font-family: 'Microsoft YaHei';
 }
 
 .main-content {
@@ -144,6 +184,19 @@ font-family: 'Microsoft YaHei';
 
 .normal:hover {
     color: #000000;
+}
+
+.play-button2 {
+    width: 200px;
+    height: 50px;
+    font-family: 'Platinum Sign Over';
+    font-size: 20px;
+    background-color: #FFFFFF;
+    color: #000000;
+    box-shadow:#6DD5DC 0px 3px 5px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
 }
 
 .play-button {
